# intercom

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  package-lock.json  package.json
apps/api/: .dockerignore  .importlinter  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 0001_identity.py  0002_crm.py  0003_messaging.py  0004_billing.py  0004_knowledge.py  0005_merge_billing_knowledge.py  0006_channels.py  0006_reporting.py  0007_channels.py  0008_webhooks.py  0009_automation.py  0009_knowledge_hub.py  0010_ai_orchestrator.py  0010_inbox_v2.py  0011_neko_metering.py  0011_outbound.py  0012_segments.py  0013_imports.py  0014_integrations.py  0015_automation.py  0015_neko_analytics.py  0016_merge_automation_analytics.py  0017_device_tokens.py  0018_departition_timeseries.py
apps/api/scripts/: README.md  stripe_test_clock.py
apps/api/src/relay/: __init__.py  cli.py  db_metadata.py  health.py  main.py  settings.py  worker.py
apps/api/src/relay/core/: __init__.py  api_key.py  asyncio_bridge.py  base_model.py  breaker.py  context.py  crypto.py  db.py  deps.py  errors.py  idempotency.py  ids.py  logging.py  middleware.py  outbox.py  outbox_relay.py  pagination.py  predicates.py  principal.py  public_api.py  rbac.py  realtime.py  realtime_fanout.py  redis.py  rls.py  security.py  ssrf.py  storage.py
apps/api/src/relay/core/observability/: __init__.py  metrics.py  scrub.py  sentry.py  tracing.py
apps/api/src/relay/modules/ai/: __init__.py  consumer.py  events.py  ledger.py  metering.py  models.py  pipeline.py  prompts.py  protocol.py  providers.py  redteam.py  resilience.py  router.py  schemas.py  service.py  streaming.py  tasks.py
apps/api/src/relay/modules/automation/: __init__.py  consumer.py  events.py  executor.py  graph.py  models.py  router.py  schemas.py  service.py  tasks.py
apps/api/src/relay/modules/billing/: __init__.py  events.py  models.py  router.py  schemas.py  service.py  stripe_client.py  tasks.py
apps/api/src/relay/modules/channels/: __init__.py  dispatch.py  events.py  mime.py  models.py  reply_token.py  router.py  schemas.py  sender.py  service.py  sns.py  tasks.py
apps/api/src/relay/modules/crm/: __init__.py  audience.py  events.py  import_worker.py  models.py  router.py  schemas.py  segments_consumer.py  service.py  tasks.py
apps/api/src/relay/modules/identity/: __init__.py  dependencies.py  events.py  middleware.py  models.py  oidc.py  principal.py  rbac.py  router.py  schemas.py  service.py
apps/api/src/relay/modules/integrations/: __init__.py  consumer.py  events.py  models.py  router.py  schemas.py  service.py  slack_format.py  slack_sign.py  tasks.py
apps/api/src/relay/modules/knowledge/: __init__.py  blocks.py  chunking.py  embeddings.py  eval_corpora.py  eval_harness.py  events.py  indexing.py  indexing_consumer.py  models.py  pipeline.py  readability.py  retrieval.py  revalidation.py  router.py  schemas.py  service.py  sources.py  tasks.py  vectors.py
apps/api/src/relay/modules/messaging/: __init__.py  assignment.py  business_hours.py  events.py  models.py  office_hours.py  push.py  push_consumer.py  push_service.py  router.py  schemas.py  service.py  sla.py  sla_consumer.py  tasks.py  views.py
apps/api/src/relay/modules/outbound/: __init__.py  consumer.py  events.py  mjml.py  models.py  ratelimit.py  reducer.py  router.py  schemas.py  service.py  stats_consumer.py  tasks.py  unsubscribe_token.py
apps/api/src/relay/modules/platform/: __init__.py  events.py  models.py  router.py  schemas.py  service.py
apps/api/src/relay/modules/reporting/: __init__.py  consumer.py  events.py  models.py  reducer.py  router.py  schemas.py  service.py  tasks.py
apps/api/src/relay/modules/tickets/: __init__.py  events.py  models.py  router.py  service.py
apps/api/src/relay/modules/webhooks/: __init__.py  consumer.py  events.py  models.py  router.py  schemas.py  service.py  signing.py  tasks.py
apps/api/tests/: conftest.py
apps/api/tests/architecture/: test_module_boundaries.py
apps/api/tests/integration/: test_ai_redteam.py  test_ai_turn.py  test_audience_snapshot.py  test_auth_flows.py  test_balanced_assignment.py  test_billing.py  test_channels_email.py  test_collision.py  test_crm.py  test_csat_breakdown.py  test_event_rollups.py  test_imports.py  test_integrations_slack.py  test_integrations_zapier.py  test_knowledge.py  test_knowledge_indexing.py  test_knowledge_retrieval.py  test_messaging.py  test_mobile_push.py  test_neko_analytics.py  test_neko_metering.py  test_observability.py  test_office_hours.py  test_outbound_campaigns.py  test_outbound_consent.py  test_outbound_models.py  test_outbound_posts.py  test_outbox_relay.py  test_p05_inbox_reads.py  test_platform_uploads.py  test_public_api.py  test_rbac_endpoints.py  test_realtime_fanout.py  test_realtime_tokens.py  test_reporting.py  test_reporting_endpoints.py  test_reporting_no_parts.py  test_retrieval_eval.py  test_rls_audit.py  test_segments.py  (+9 more)
apps/api/tests/unit/: test_ai_protocol.py  test_ai_providers.py  test_ai_resilience.py  test_api_key.py  test_audience_compiler.py  test_business_hours.py  test_channels_mime.py  test_channels_reply_token.py  test_channels_sns.py  test_channels_tasks.py  test_crm_validation.py  test_health.py  test_ids.py  test_import_parse.py  test_knowledge_blocks.py  test_knowledge_chunking.py  test_knowledge_embeddings.py  test_knowledge_indexing_consumer.py  test_knowledge_readability.py  test_knowledge_sources.py  test_messaging_state.py  test_metrics.py  test_mjml.py  test_outbox_relay_reconnect.py  test_post_fanout.py  test_predicates.py  test_public_api_unit.py  test_push.py  test_rbac.py  test_realtime.py  test_reporting_reducer.py  test_reporting_reducer_ai_involved.py  test_scrub.py  test_security.py  test_slack_format.py  test_slack_signing.py  test_ssrf.py  test_stripe_client.py  test_tracing_context.py  test_view_compiler.py  (+2 more)
build-prompts/: README.md  phase-0-foundation.md  phase-1-ai-automation.md  (+3 more)
(+250 files in other folders)
