[project]
name = "relay-api"
version = "0.0.0"
description = "Relay — modular FastAPI monolith (RFC-001)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",          # sync driver for Alembic
    "alembic>=1.14",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "argon2-cffi>=23.1",             # password hashing (RFC-001 §10)
    "pyjwt[crypto]>=2.10",           # access/refresh JWTs + OIDC id_token verify
    "httpx>=0.28",                   # OIDC + external calls (always timed out)
    "python-multipart>=0.0.12",      # OAuth form posts
    "structlog>=24.4",               # structured JSON logs w/ request/workspace ids
    "orjson>=3.10",
    "tenacity>=9.0",                 # bounded + jittered retries
    "boto3>=1.35",                   # S3/MinIO
]

[project.scripts]
relay = "relay.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/relay"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "import-linter>=2.1",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres,redis]>=4.8",
    "httpx>=0.28",
    "types-boto3>=1.35",
]

# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM", "TID", "RUF"]
# ASYNC: no blocking calls in async paths (RFC master rules); TID: banned imports.
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.isort]
known-first-party = ["relay"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
# Celery/kombu ship untyped decorators (@task, signal .connect); don't reject them.
disallow_untyped_decorators = false
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["testcontainers.*", "celery.*", "kombu.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
    "integration: tests that require testcontainers (Postgres/Redis)",
]
